'My Team' header on html

--- a/public/assets/index.html
+++ b/public/assets/index.html
@@ -12,6 +12,9 @@
 </head>
 
 <body>
+    <header class="header">
+        <div>My Team</div>
+    </header>
     <div class="row-1">
         <div class="card" style="width: 18rem;">
             <ul class="list-group list-group-flush">
