Card layout for html page

--- a/public/assets/index.html
+++ b/public/assets/index.html
@@ -12,48 +12,70 @@
 </head>
 
 <body>
-    <header class="header">
-        <div>My Team</div>
-    </header>
-    <div class="row-1">
-        <div class="card" style="width: 18rem;">
-            <ul class="list-group list-group-flush">
-                <li class="list-group-item">An item</li>
-                <li class="list-group-item">A second item</li>
-                <li class="list-group-item">A third item</li>
-            </ul>
+    <div class="body">
+        <header class="header">
+            <div>My Team</div>
+        </header>
+
+        <div class="row-1">
+            <div class="card-1">
+                <h2 class="card-header">Manger</h2>
+                <div class="card" style="width: 18rem;">
+                    <ul class="list-group list-group-flush">
+                        <li class="list-group-item">ID:</li>
+                        <li class="list-group-item">Email:</li>
+                        <li class="list-group-item">Office Number:</li>
+                    </ul>
+                </div>
+            </div>
+
+            <div class="card-2">
+                <h2 class="card-header">Engineer</h2>
+                <div class="card" style="width: 18rem;">
+                    <ul class="list-group list-group-flush">
+                        <li class="list-group-item">ID:</li>
+                        <li class="list-group-item">Email:</li>
+                        <li class="list-group-item">Github:</li>
+                    </ul>
+                </div>
+            </div>
+
+
+            <div class="card-3">
+                <h2 class="card-header">Engineer</h2>
+                <div class="card" style="width: 18rem;">
+                    <ul class="list-group list-group-flush">
+                        <li class="list-group-item">ID:</li>
+                        <li class="list-group-item">Email:</li>
+                        <li class="list-group-item">Github:</li>
+                    </ul>
+                </div>
+            </div>
         </div>
-        <div class="card" style="width: 18rem;">
-            <ul class="list-group list-group-flush">
-                <li class="list-group-item">An item</li>
-                <li class="list-group-item">A second item</li>
-                <li class="list-group-item">A third item</li>
-            </ul>
+
+        <div class="row-2">
+            <div class="card-4">
+                <h2 class="card-header">Engineer</h2>
+                <div class="card" style="width: 18rem;">
+                    <ul class="list-group list-group-flush">
+                        <li class="list-group-item">ID:</li>
+                        <li class="list-group-item">Email:</li>
+                        <li class="list-group-item">Github:</li>
+                    </ul>
+                </div>
+            </div>
+
+            <div class="card-5">
+                <h2 class="card-header">Intern</h2>
+                <div class="card" style="width: 18rem;">
+                    <ul class="list-group list-group-flush">
+                        <li class="list-group-item">ID:</li>
+                        <li class="list-group-item">Email:</li>
+                        <li class="list-group-item">Github:</li>
+                    </ul>
+                </div>
+            </div>
         </div>
-        <div class="card" style="width: 18rem;">
-            <ul class="list-group list-group-flush">
-                <li class="list-group-item">An item</li>
-                <li class="list-group-item">A second item</li>
-                <li class="list-group-item">A third item</li>
-            </ul>
-        </div>
-    </div>
-    <div class="row-2">
-        <div class="card" style="width: 18rem;">
-            <ul class="list-group list-group-flush">
-                <li class="list-group-item">An item</li>
-                <li class="list-group-item">A second item</li>
-                <li class="list-group-item">A third item</li>
-            </ul>
-        </div>
-        <div class="card" style="width: 18rem;">
-            <ul class="list-group list-group-flush">
-                <li class="list-group-item">An item</li>
-                <li class="list-group-item">A second item</li>
-                <li class="list-group-item">A third item</li>
-            </ul>
-        </div>
-    </div>
 </body>
 
 </html>
