Card Styling and positionn updated

--- a/public/assets/index.html
+++ b/public/assets/index.html
@@ -31,6 +31,61 @@
                 </div>
             </div>
 
+            <div class="card-2">
+                <h2 class="card-header">Engineer</h2>
+                <div class="card-layout">
+                    <div class="card" style="width: 18rem;">
+                        <ul class="list-group list-group-flush">
+                            <li class="list-group-item">ID:</li>
+                            <li class="list-group-item">Email:</li>
+                            <li class="list-group-item">Github:</li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
+
+            <div class="card-3">
+                <h2 class="card-header">Engineer</h2>
+                <div class="card-layout">
+                    <div class="card" style="width: 18rem;">
+                        <ul class="list-group list-group-flush">
+                            <li class="list-group-item">ID:</li>
+                            <li class="list-group-item">Email:</li>
+                            <li class="list-group-item">Github:</li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <br><br>
+        <div class="row-2">
+            <div class="card-4">
+                <h2 class="card-header">Engineer</h2>
+                <div class="card-layout">
+                    <div class="card" style="width: 18rem;">
+                        <ul class="list-group list-group-flush">
+                            <li class="list-group-item">ID:</li>
+                            <li class="list-group-item">Email:</li>
+                            <li class="list-group-item">Github:</li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
+
+            <div class="card-5">
+                <h2 class="card-header">Intern</h2>
+                <div class="card-layout">
+                    <div class="card" style="width: 18rem;">
+                        <ul class="list-group list-group-flush">
+                            <li class="list-group-item">ID:</li>
+                            <li class="list-group-item">Email:</li>
+                            <li class="list-group-item">School:</li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
+        </div>
+
 
 </body>
 
