--- a/public/assets/index.html
+++ b/public/assets/index.html
@@ -19,7 +19,7 @@
 
         <div class="row-1">
             <div class="card-1">
-                <h2 class="card-header">Manger</h2>
+                <h2 class="card-header">Manager</h2>
                 <div class="card-layout">
                     <div class="card" style="width: 18rem;">
                         <ul class="list-group list-group-flush">
