--- a/public/assets/index.html
+++ b/public/assets/index.html
@@ -8,7 +8,7 @@
     <title>Document</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js"></script>
-    <link href="./style.css" rel="stylesheet">
+    <link href="/dist/style.css" rel="stylesheet">
 </head>
 
 <body>
