--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
                         <div class="card" style="width: 18rem;">
                             <ul class="list-group list-group-flush">
                                 <li class="list-group-item">ID:24</li>
-                                <li class="list-group-item">Email:Curtis@vanausdal.net</li>
+                                <li class="list-group-item">Email:Cloe@vanausdal.net</li>
                                 <li class="list-group-item">School:University Of Utah:</li>
                             </ul>
                         </div>
